Tune for a "bounce in and back" feeling

--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 </head>
 <body id="sys-screen" class="sys-screen">
   <div class="sys-windows" id="sys-windows">
-    <div class="sys-window" id="sys-window-home">
+    <div class="sys-window" id="sys-window-home" style="right: 0px;">
       <div id="rb-rocketbar" class="rb-rocketbar rb-min">
         <div id="rb-input" class="rb-input">Search or address</div>
         <div id="rb-icons" class="rb-icons ir"></div>
       </div>
       <img src="home.png" width="320" height="480">
     </div>
-    <div class="sys-window" id="sys-window-email">
+    <div class="sys-window" id="sys-window-email" style="right: 340px;">
+      <div id="rb-rocketbar" class="rb-rocketbar rb-min">
+        <div id="rb-input" class="rb-input">Search or address</div>
+        <div id="rb-icons" class="rb-icons ir"></div>
+      </div>
+      <img src="email-01.png" width="320" height="480">
+    </div>
+    <div class="sys-window" id="sys-window-email" style="right: 680px;">
       <div id="rb-rocketbar" class="rb-rocketbar rb-min">
         <div id="rb-input" class="rb-input">Search or address</div>
         <div id="rb-icons" class="rb-icons ir"></div>
