Basic "appear" working for new app

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <img src="home.png" width="320" height="480">
     </div>
-    <div class="sys-window sys-window-stack" id="sys-window-email" style="right: 340px;">
+    <div class="sys-window sys-window-stack sys-window-new" style="right: 340px;">
       <div id="rb-rocketbar" class="rb-rocketbar rb-min">
         <div id="rb-input" class="rb-input">Search or address</div>
         <div id="rb-icons" class="rb-icons ir"></div>
