--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
       </div>
       <img src="email-01.png" width="320" height="480">
     </div>
-    <div class="sys-window" id="sys-window-email" style="right: 680px;">
+    <div class="sys-window sys-window-stack sys-window-old" style="right: 340px;">
+      <div id="rb-rocketbar" class="rb-rocketbar rb-min">
+        <div id="rb-input" class="rb-input">Search or address</div>
+        <div id="rb-icons" class="rb-icons ir"></div>
+      </div>
+      <img src="dialer-01.png" width="320" height="480">
+    </div>
+    <div class="sys-window sys-window-old" id="sys-window-email" style="right: 680px;">
       <div id="rb-rocketbar" class="rb-rocketbar rb-min">
         <div id="rb-input" class="rb-input">Search or address</div>
         <div id="rb-icons" class="rb-icons ir"></div>
