Move index -> 01-swoop
We want to allow multiple effects

--- a/01-swoop.html
+++ b/01-swoop.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Gaia App to Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="01-swoop.css">
 </head>
 <body id="sys-screen" class="sys-screen">
   <div class="sys-windows" id="sys-windows">
@@ -37,7 +37,7 @@
       <img src="email-01.png" width="320" height="480">
     </div>
   </div>
-  <script src="main.js"></script>
+  <script src="01-swoop.js"></script>
 </body>
 </html>
 
