--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body id="sys-screen" class="sys-screen">
 <ul>
   <li><a href="01-swoop.html">Swoop</a></li>
+  <li><a href="02-slide.html">Slide</a></li>
 </ul>
 </body>
 </html>
